- Replaced tooltips for icons with h4 tags. - Fixed spacing on landing page. - Added code for Google Suite. - Updated UI to blue theme.

--- a/css/agency.css
+++ b/css/agency.css
@@ -18,7 +18,7 @@ body {
 }
 
 .text-primary {
-  color: #fed136;
+  color: #0045d2;
 }
 
 p {
@@ -39,14 +39,14 @@ a.active {
 }
 
 a {
-  color: #fed136;
+  color: #0045d2;
 }
 
 a:hover,
 a:focus,
 a:active,
 a.active {
-  color: #fec503;
+  color: #0380fc;
 }
 
 h1,
@@ -74,8 +74,8 @@ h6 {
 
 .btn-primary {
   color: white;
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #0045d2;
+  border-color: #0045d2;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -87,8 +87,8 @@ h6 {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: white;
-  background-color: #fec503;
-  border-color: #f6bf01;
+  background-color: #0380fc;
+  border-color: #0045d2;
 }
 
 .btn-primary:active,
@@ -112,19 +112,19 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #0045d2;
+  border-color: #0045d2;
 }
 
 .btn-primary .badge {
-  color: #fed136;
+  color: #0045d2;
   background-color: white;
 }
 
 .btn-xl {
   color: white;
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #0045d2;
+  border-color: #0045d2;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -139,8 +139,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
   color: white;
-  background-color: #fec503;
-  border-color: #f6bf01;
+  background-color: #0380fc;
+  border-color: #0045d2;
 }
 
 .btn-xl:active,
@@ -164,12 +164,12 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #0045d2;
+  border-color: #0045d2;
 }
 
 .btn-xl .badge {
-  color: #fed136;
+  color: #0045d2;
   background-color: white;
 }
 
@@ -179,7 +179,7 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-custom .navbar-brand {
-  color: #fed136;
+  color: white;
   font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
 }
 
@@ -187,7 +187,7 @@ fieldset[disabled] .btn-xl.active {
 .navbar-custom .navbar-brand:focus,
 .navbar-custom .navbar-brand:active,
 .navbar-custom .navbar-brand.active {
-  color: #fec503;
+  color: #0380fc;
 }
 
 .navbar-custom .navbar-collapse {
@@ -195,8 +195,8 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-custom .navbar-toggle {
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #0045d2;
+  border-color: #0045d2;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   color: white;
@@ -205,7 +205,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
-  background-color: #fed136;
+  background-color: #0045d2;
 }
 
 .navbar-custom .nav li a {
@@ -218,20 +218,20 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
-  color: #fed136;
+  color: #0045d2;
   outline: none;
 }
 
 .navbar-custom .navbar-nav>.active>a {
   border-radius: 0;
   color: white;
-  background-color: #fed136;
+  background-color: #0045d2;
 }
 
 .navbar-custom .navbar-nav>.active>a:hover,
 .navbar-custom .navbar-nav>.active>a:focus {
   color: white;
-  background-color: #fec503;
+  background-color: #0380fc;
 }
 
 @media (min-width: 768px) {
@@ -265,7 +265,7 @@ fieldset[disabled] .btn-xl.active {
 }
 
 header {
-  background-image: url('../img/header-bg.jpg');
+  background-image: url('../img/header-bg3.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -490,7 +490,7 @@ section h3.section-subheading {
   height: 80px;
   position: absolute;
   z-index: 100;
-  background-color: #fed136;
+  background-color: #0045d2;
   color: white;
   border-radius: 100%;
   border: 7px solid #f1f1f1;
@@ -641,7 +641,7 @@ aside.clients img {
 
 section#contact {
   background-color: #222222;
-  background-image: url('../img/map-image.png');
+  /*background-image: url('../img/map-image.png');*/
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -668,7 +668,7 @@ section#contact .form-group textarea.form-control {
 }
 
 section#contact .form-control:focus {
-  border-color: #fed136;
+  border-color: #0045d2;
   box-shadow: none;
 }
 
@@ -748,7 +748,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-  background-color: #fed136;
+  background-color: #0045d2;
 }
 
 .btn:focus,
@@ -846,12 +846,12 @@ ul.social-buttons li a:active {
 
 ::-moz-selection {
   text-shadow: none;
-  background: #fed136;
+  background: #0045d2;
 }
 
 ::selection {
   text-shadow: none;
-  background: #fed136;
+  background: #0045d2;
 }
 
 img::selection {
@@ -863,5 +863,5 @@ img::-moz-selection {
 }
 
 body {
-  webkit-tap-highlight-color: #fed136;
+  webkit-tap-highlight-color: #0045d2;
 }
